<resources>
    <string name="app_name" translatable="false">Shoe Store</string>
    <string name="home">Home</string>
    <string name="search">Search</string>
    <string name="cart">Cart</string>
    <string name="account">Account</string>
    <string name="log_in">Log in</string>
    <string name="sign_up">Sign up</string>
    <string name="featured">Featured</string>
    <string name="running_shoes">Running shoes</string>
    <string name="casual_shoes">Casual shoes</string>
    <string name="football_boots">Football boots</string>
    <string name="high_heels">High heels</string>
    <string name="sports_equipment">Sports equipment</string>
    <string name="next">Next</string>
    <string name="email">E mail</string>
    <string name="password">Password</string>
    <string name="type_your_email">Type your email</string>
    <string name="type_your_password">Type your password</string>
    <string name="error">Error: %s</string>
    <string name="your_account_has_been_successfully_created">Your account has been successfully created</string>
    <string name="log_out">Log out</string>
    <string name="my_orders">My Orders</string>
    <string name="you_haven_t_placed_any_orders_yet">You haven\'t placed any orders yet</string>
    <string name="price_value">USD %.2f</string>
    <string name="product_name">%s %s</string>
</resources>